--- a/tcc/aplicacao/tcc/website/templates/index.html
+++ b/tcc/aplicacao/tcc/website/templates/index.html
@@ -1,18 +1,8 @@
-<!DOCTYPE html>
-<html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Página Inicial</title>
-</head>
-<body>
-    <nav>
-        <div>
-            
-        </div>
-    </nav>
-    <footer>
-        
-    </footer>
-</body>
-</html>
+{% extends 'base.html' %}
+{% block title %}PAGINA{% endblock %}
+<style type="text/css">
+    
+</style>
+{% block conteudo %}
+<h1>A</h1>
+{% endblock %}
