--- a/tcc/aplicacao/tcc/website/templates/index.html
+++ b/tcc/aplicacao/tcc/website/templates/index.html
@@ -1,8 +1,6 @@
 {% extends 'base.html' %}
-{% block title %}PAGINA{% endblock %}
-<style type="text/css">
-    
-</style>
+{% block title %} Página Inicial {% endblock %}
+
 {% block conteudo %}
-<h1>A</h1>
+    <h1>Seja bem vindo ao Controle de Reservas de Laboratórios</h1>
 {% endblock %}
