--- a/Saep/Papelaria/papelaria/website/templates/estoque_atual.html
+++ b/Saep/Papelaria/papelaria/website/templates/estoque_atual.html
@@ -1,19 +1,30 @@
 {% extends 'base.html' %}
 
 {% block conteudo %}
-<h1>Estoque de Livros</h1>
-<table>
-    <tr>
-        <th>Título</th>
-        <th>Quantidade em Estoque</th>
-        <th>Preço (R$)</th>
-    </tr>
-    {% for item in estoque %}
-    <tr>
-        <td>{{ item.titulo }}</td>
-        <td>{{ item.quantidade }}</td>
-        <td>{{ item.preco|floatformat:2 }}</td>
-    </tr>
-    {% endfor %}
-</table>
+    <form method="GET">
+        <label for="livro">Escolha o livro:</label>
+        <select name="livro" id="livro">
+            <option value="">Todos</option>
+            {% for liv in livros %}
+                <option value="{{ liv.titulo }}">{{ liv.titulo }}</option>
+            {% endfor %}
+        </select>
+        <button type="submit">Filtrar</button>
+    </form> 
+
+    <h1>Estoque de Livros</h1>
+    <table>
+        <tr>
+            <th>Título</th>
+            <th>Quantidade em Estoque</th>
+            <th>Preço (R$)</th>
+        </tr>
+        {% for item in estoque %}
+        <tr>
+            <td>{{ item.titulo }}</td>
+            <td>{{ item.quantidade }}</td>
+            <td>{{ item.preco|floatformat:2 }}</td>
+        </tr>
+        {% endfor %}
+    </table>
 {% endblock %}
