--- a/Saep/Papelaria/papelaria/website/templates/estoque_entrada.html
+++ b/Saep/Papelaria/papelaria/website/templates/estoque_entrada.html
@@ -4,6 +4,17 @@
     <h1>Estoque de Compras</h1>
     <a href="{% url 'cadastrar_entrada' %}">Comprar Livros</a>
 
+    <form method="GET">
+        <label for="livro">Escolha o livro:</label>
+        <select name="livro" id="livro">
+            <option value="">Todos</option>
+            {% for liv in livros %}
+                <option value="{{ liv.titulo }}">{{ liv.titulo }}</option>
+            {% endfor %}
+        </select>
+        <button type="submit">Filtrar</button>
+    </form>    
+
     <table>
         <tr>
             <th>Livro</th>
