--- a/Saep/Papelaria/papelaria/website/templates/estoque_atual.html
+++ b/Saep/Papelaria/papelaria/website/templates/estoque_atual.html
@@ -1,6 +1,7 @@
 {% extends 'base.html' %}
 
 {% block conteudo %}
+    <h1 style="padding-left: 530px;">Estoque de Livros</h1>
     <form method="GET">
         <label for="livro">Escolha o livro:</label>
         <select name="livro" id="livro">
@@ -11,8 +12,6 @@
         </select>
         <button type="submit">Filtrar</button>
     </form> 
-
-    <h1>Estoque de Livros</h1>
     <table>
         <tr>
             <th>Título</th>
