--- a/Saep/Papelaria/papelaria/website/templates/estoque_entrada.html
+++ b/Saep/Papelaria/papelaria/website/templates/estoque_entrada.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Estoque de Compras{% endblock %}
 {% block conteudo %}
-    <h1>Estoque de Compras</h1>
+    <h1 style="padding-left: 530px;">Estoque de Compras</h1>
     <a href="{% url 'cadastrar_entrada' %}">Comprar Livros</a>
 
     <form method="GET">
