--- a/Saep/Papelaria/papelaria/website/templates/estoque_saida.html
+++ b/Saep/Papelaria/papelaria/website/templates/estoque_saida.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% block title %}Estoque de Vendas{% endblock %}
 {% block conteudo %}
-    <h1>Estoque de Vendas</h1>
+    <h1 style="padding-left: 530px;">Estoque de Vendas</h1>
     <a href="{% url 'vender_estoque' %}">Vender Livros</a>
 
     <form method="GET">
