--- a/tcc/aplicacao/tcc/website/templates/base.html
+++ b/tcc/aplicacao/tcc/website/templates/base.html
@@ -22,8 +22,9 @@
         <img src="{% static 'logo.png' %}" alt="dropdown image" class="img-responsive" style="width: 50px;">
       </button>
       <ul class="dropdown-menu">
-        <li><a class="dropdown-item" href="#">Alterar nome da Escola</a></li>
-        <li><a class="dropdown-item" href="#">Alterar Logo</a></li>
+        <li><a class="dropdown-item" href="#">Alterar Dados da Escola</a></li>
+        <li><a class="dropdown-item" href="{% url 'logout' %}">Sair</a></li>
+        <li><a class="dropdown-item" href="{% url 'cadastro' %}">Cadastrar</a></li>
       </ul>
     </div>
 
@@ -66,8 +67,6 @@
       </div>
     </div>
   </nav>
-
-
 
   {% block scripts %}
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
