--- a/tcc/aplicacao/tcc/website/templates/base.html
+++ b/tcc/aplicacao/tcc/website/templates/base.html
@@ -4,8 +4,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="Cache-Control" content="no-cache, no-store, must-revalidate">
+    <meta http-equiv="Pragma" content="no-cache">
+    <meta http-equiv="Expires" content="0">
     <title>{% block title %}Página Inicial{% endblock %}</title>
+    <script src="https://code.jquery.com/jquery-3.7.1.js" integrity="sha256-eKhayi8LEQwp4NKxN+CfCh+3qOVUtJn3QNZ0TciWLP4=" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.2.2/css/dataTables.dataTables.min.css">
     <script src="https://unpkg.com/@tailwindcss/browser@4"></script>
+    <script src="https://unpkg.com/flowbite@1.3.4/dist/flowbite.js"></script>
+    <link rel="stylesheet" href="https://cdn.datatables.net/2.2.2/css/dataTables.dataTables.css" />
+    <script src="https://cdn.datatables.net/2.2.2/js/dataTables.min.js"></script>
 </head>
 
 <body class="h-screen bg-gray-100">
@@ -21,15 +29,27 @@
                     class="hidden absolute right-0 top-16 mt-2 w-64 bg-white border rounded-lg shadow-lg z-10">
                     <ul class="py-2 text-gray-700">
                         <div class="flex px-4 py-3 m-2 rounded-lg items-center gap-4 hover:bg-gray-300 transition-all">
-                            <img src="https://upload.wikimedia.org/wikipedia/commons/0/05/SENAI_logo_2024.png"
-                                class="inline-flex w-14 h-14 rounded-full object-contain p-1 shadow-md cursor-pointer"
-                                alt="Imagem da Escola">
-                            <div class="text-medium truncate">
-                                Senai
-                            </div>
+                            {% if inf_escola %}
+                                {% for e in inf_escola %}
+                                    <img src="{{ e.logo.url }}" class="inline-flex w-14 h-14 rounded-full object-contain p-1 shadow-md cursor-pointer" alt="Imagem da Escola">
+                                    <div class="text-medium truncate">
+                                        {{ e.nome }}
+                                    </div>
+                                {% empty %}
+                                    <p>Nenhuma escola cadastrada</p>
+                                {% endfor %}
+                            {% else %}
+                                <p>Variável inf_escola não existe no contexto</p>
+                            {% endif %}
                         </div>
                         <li><a href="#" class="block px-4 py-2 hover:bg-gray-200">Suporte</a></li>
                         <li><a href="#" class="block px-4 py-2 hover:bg-gray-200">Ajuda</a></li>
+                        <li>
+                            <form action="{% url 'logout' %}" method="post">
+                                {% csrf_token %}
+                                <button type="submit" class="w-full text-left px-4 py-2 hover:bg-gray-200 cursor-pointer">Sair</button>
+                            </form>
+                        </li>
                     </ul>
                 </div>
             </div>
@@ -45,13 +65,13 @@
                         </a>
                     </li>
                     <li>
-                        <a href="{% url 'lab' %}" class="flex items-center gap-2 p-3 rounded-lg cursor-pointer hover:bg-gray-700 hover:text-white transition-all">
+                        <a href="{% url 'lista_laboratorios' %}" class="flex items-center gap-2 p-3 rounded-lg cursor-pointer hover:bg-gray-700 hover:text-white transition-all">
                             <i data-lucide="boxes" class="duration-700 transition-all"></i>
                             <span class="flex-1 ms-2 whitespace-nowrap">Laboratórios</span>
                         </a>
                     </li>
                     <li>
-                        <a href="#" class="flex items-center gap-2 p-3 rounded-lg cursor-pointer hover:bg-gray-700 hover:text-white transition-all">
+                        <a href="{% url 'agenda' %}" class="flex items-center gap-2 p-3 rounded-lg cursor-pointer hover:bg-gray-700 hover:text-white transition-all">
                             <i data-lucide="calendar" class="duration-700 transition-all"></i>
                             <span class="flex-1 ms-2 whitespace-nowrap">Agenda</span>
                         </a>
@@ -62,6 +82,30 @@
                             <span class="flex-1 ms-2 whitespace-nowrap">Relatórios</span>
                         </a>
                     </li>
+                    {% if user.is_superuser %}
+                        <li>
+                            <button type="button" class="flex items-center w-full p-2 text-base font-normal text-gray-900 transition duration-75 rounded-lg group hover:bg-gray-100" aria-controls="admin_dropdown" data-collapse-toggle="admin_dropdown">
+                                <i data-lucide="shield-user" class="duration-700 transition-all"></i>
+                                <span class="flex-1 ml-3 text-left whitespace-nowrap" sidebar-toggle-item>Área Administrativa</span>
+                                <i data-lucide="chevron-down"></i>
+                            </button>
+                            <ul id="admin_dropdown" class="hidden py-2 space-y-2 overflow-y-auto">
+                                <li>
+                                    <a href="{% url 'escola' %}">Escola</a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'admin_lista_laboratorios' %}" class="whitespace-nowrap">Laboratórios e salas de aula</a>
+                                </li>
+                                <li>
+                                    <a href="{% url 'lista_usuarios' %}">Professores</a>
+                                </li>
+                                <li>
+                                    <a href=""></a>
+                                </li>
+                            </ul>
+                        </li>
+                    {% endif %}
+                    <div class="border-b-1 flex text-center"></div>
                 </ul>
             </aside>
             <main class="flex-1 p-6 overflow-y-auto">
@@ -89,12 +133,28 @@
         });
     </script>
 
+    <script>
+        // Manipulação do histórico
+        if(window.location.pathname === "{% url 'login' %}" && "{{ request.user.is_authenticated }}" === "True") {
+            history.replaceState(null, "", "{% url 'index' %}");
+        }
+        
+        // Bloqueio do botão Voltar quando logado
+        window.addEventListener('popstate', function(event) {
+            if("{{ request.user.is_authenticated }}" === "True" && 
+                event.state && 
+                event.state.previousUrl === "{% url 'login' %}") {
+                    history.go(1);
+            }
+        });
+    </script>
+
     <script src="https://unpkg.com/lucide@latest"></script>
     <script>
         lucide.createIcons();
     </script>
-    {% block scripts %}{% endblock %}
-
+    
+        
 </body>
 
 </html>
