--- a/tcc/aplicacao/tcc/website/templates/login.html
+++ b/tcc/aplicacao/tcc/website/templates/login.html
@@ -64,7 +64,7 @@
     <div class="container-form">
         <div class="card shadow-lg card-form">
             <h2 class="text-center mb-3">Entrar</h2>
-            <form method="POST" action="{% url 'logar' %}">
+            <form method="POST" action="{% url 'login' %}" data-cacheable="true">
                 {% csrf_token %}
 
                 <div class="mb-3">
@@ -78,7 +78,7 @@
                 </div>
 
                 <div class="mb-3 form-check">
-                    <input class="form-check-input" type="checkbox" id="rememberMe">
+                    <input class="form-check-input" type="checkbox" id="rememberMe" {% if request.COOKIES.rememberMe %}checked{% endif %}>
                     <label class="form-check-label" for="rememberMe">Lembrar-me</label>
                 </div>
 
@@ -153,8 +153,10 @@
         });
     </script>
 
-<script>
-    
+    <script>
+        if(window.location.pathname === "{% url 'login' %}" && "{{ request.user.is_authenticated }}" === "True") {
+            history.replaceState(null, "", "{% url 'index' %}");
+        }
     </script>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
