--- a/tcc/aplicacao/tcc/website/templates/escola/escola.html
+++ b/tcc/aplicacao/tcc/website/templates/escola/escola.html
@@ -45,7 +45,7 @@
     </div>
 </div>
 
-<div id="imageModal" class="fixed inset-0 bg-black bg-opacity-75 flex items-center justify-center z-50 hidden">
+<div id="imageModal" class="fixed inset-0 bg-opacity-75 flex items-center justify-center z-50 hidden backdrop-blur-sm">
     <div class="relative bg-white p-4 rounded-lg shadow-xl">
         <img id="modalImage" class="max-w-[90vw] max-h-[90vh] rounded-lg shadow-md" />
         <button onclick="closeImageModal()" class="absolute top-4 right-4 text-white bg-gray-800 rounded-full p-2 shadow-md hover:bg-gray-700">
