--- a/tcc/aplicacao/tcc/website/templates/cadastro.html
+++ b/tcc/aplicacao/tcc/website/templates/cadastro.html
@@ -91,20 +91,13 @@
                     <label for="passwordInput" class="form-label">Senha</label>
                     <input type="password" placeholder="Senha" class="form-control" id="passwordInput" name="senha" required>
                 </div>
-
+                
                 <div class="mb-3">
-                    <label class="form-label">Tipo de Usuário</label>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="tipoUsuario" id="admin" value="admin" required>
-                        <label class="form-check-label" for="admin">Administrador</label>
-                    </div>
-                    <div class="form-check">
-                        <input class="form-check-input" type="radio" name="tipoUsuario" id="usuario" value="usuario" required>
-                        <label class="form-check-label" for="usuario">Usuário</label>
-                    </div>
+                    <label for="confirmPasswordInput" class="form-label">Confirmar senha</label>
+                    <input type="password" placeholder="Confirmar senha" class="form-control" id="confirmPasswordInput" name="confirmarSenha" required>
                 </div>
 
-                <button type="submit" class="btn btn-primary w-100">Registrar-se</button>
+                <button type="submit" class="btn btn-primary w-100 mt-3">Registrar-se</button>
             </form>
             <p></p>
             <a class="btn btn-secondary w-100 py-2" href="{% url 'login' %}">Voltar ao Login</a>
