--- a/tcc/aplicacao/tcc/website/templates/index.html
+++ b/tcc/aplicacao/tcc/website/templates/index.html
@@ -25,7 +25,7 @@
         </div>
     </a>
 
-    <a href=""
+    <a href="{% url 'agenda' %}"
         class="card-hover bg-gray-800 border border-gray-700 rounded-lg shadow-lg overflow-hidden transition-all duration-300 hover:border-green-400">
         <div class="relative h-52 overflow-hidden">
             <img src="{% static 'img/agenda.jpeg' %}" alt="Visualizar agenda"
@@ -41,7 +41,7 @@
         </div>
     </a>
 
-    <a href=""
+    <a href="{% url 'historico' %}"
         class="card-hover bg-gray-800 border border-gray-700 rounded-lg shadow-lg overflow-hidden transition-all duration-300 hover:border-purple-400">
         <div class="relative h-52 overflow-hidden">
             <img src="{% static 'img/relatorio_img.jpg' %}" alt="Acessar relatórios"
@@ -51,7 +51,7 @@
         <div class="p-6">
             <div class="flex items-center mb-3">
                 <i data-lucide="clipboard-list" class="text-purple-400 text-xl mr-3"></i>
-                <h3 class="text-xl font-bold text-white">Relatórios</h3>
+                <h3 class="text-xl font-bold text-white">Histórico de uso</h3>
             </div>
             <p class="text-gray-300">Acesse dados e estatísticas do uso dos laboratórios</p>
         </div>
